--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <script src='https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/p5.min.js'></script>
+        <script src='mazegen.js'></script>
         <script src='sketch.js'></script>
     </head>
 </html>
